test/expected/declare_wt-c89.out
declare x as wchar_t
             ^
14: error: "wchar_t": unsupported type until C95
